<resources>
    <string name="app_name">MaReu</string>
    <string name="add_new_meeting">Ajouter une nouvelle réunion</string>
    <string name="new_meeting_positive">Créer</string>
    <string name="new_metting_negative">Annuler</string>
    <string name="main_title">Ma réu</string>
    <string name="action_filter_title">Filter</string>
    <string name="filter_title">Filtre</string>
    <string name="filter_positive_button">Appliquer</string>
    <string name="filter_negative_button">Annuler</string>
    <string name="newMeetingRoomHint">Salle</string>
    <string name="newMeetingTopicHint">Sujet de la réunion</string>
</resources>
